...
    glassOverlay: {
      backgroundColor: `rgba(255, 255, 255, 0.03)`,
      position: 'absolute',
      top: 0,
      left: 0,
      right: 0,
      height: '50%',
      borderBottomLeftRadius: 0,
      borderBottomRightRadius: 0,
      borderTopLeftRadius: themeUtils.borderRadius.lg,
      borderTopRightRadius: themeUtils.borderRadius.lg,
    },
  });
...
