...
  const genreIcons: Record<string, McIconName> = {
    'Lo-fi Hip Hop': 'music-note-quarter' as McIconName,
    'Indie Pop': 'music-box-outline' as McIconName,
    Synthwave: 'synthesizer' as McIconName,
    Ambient: 'meditation' as McIconName,
    Rock: 'guitar-electric' as McIconName,
    Pop: 'music-note' as McIconName,
    'Hip Hop': 'microphone-outline' as McIconName,
    'R&B': 'music-note-heart-outline' as McIconName,
    EDM: 'pulse' as McIconName,
    Jazz: 'saxophone' as McIconName,
  };

...
